story 1.5: invalid option notification

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,12 @@
 {
     "configurations": [
+
         {
             "type": "java",
             "name": "CodeLens (Launch) - BibliotecaApp",
             "request": "launch",
-            "mainClass": "com.twu.biblioteca.BibliotecaApp"
+            "mainClass": "com.twu.biblioteca.BibliotecaApp",
+            "console": "integratedTerminal"
         }
     ]
 }
